syntax = "proto3";
package db_inspect_pb;

message Transaction{
    string id = 1;
    repeated TXInput vin = 2;
    repeated TXOutput vout = 3;
    string tip = 4;
    string gasLimit = 5;
    string gasPrice = 6;
}

message TXInput{
    string txid = 1;
    int32 vout = 2;
    string signature = 3;
    string public_key = 4;
}

message TXOutput{
    string   value = 1;
    string   public_key_hash = 2;
    string   contract = 3;
}

message Block{
    BlockHeader header = 1;
    repeated Transaction transactions = 2;
}

message BlockHeader{
    string hash = 1;
    string previous_hash = 2;
    int64 nonce = 3;
    int64 timestamp = 4;
    string signature = 5;
    uint64 height = 6;
}

message Utxo {
    string   amount = 1;
    string   public_key_hash = 2;
    string   txid = 3;
    uint32  tx_index = 4;
}